Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135307

Regression 6.8.2 > 6.8.3: Media player does not play mp3

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.4, 6.9.1, 6.10.0 FF
    • 6.8.3, 6.9.0 RC
    • Multimedia
    • None
    • Windows 11:
      11th Gen Intel(R) Core(TM) i9-11900KF
      RTX 380Ti

      MacOS:
      Mac mini M2

      IOS
      IPhone 14pro
      IPhone 13

      Android
      Galaxy A30s
      Readmi Note 8
    • Android, iOS/tvOS/watchOS, macOS, Windows
    • a5c6f05b5 (dev), 58c2dbe37 (6.9), 1efd6f782 (6.8)
    • Multimedia, weeks 13-14, Multimedia, weeks 15-16

      Media player does not play mp3 file (from current device, or from link). To start playing sound file, you need to force set playback position and call play again.

      To reproduce the problem, you can take standard example "mediaplayer". Playback of mp3 file will not start if you do not press rewind.

        For Gerrit Dashboard: QTBUG-135307
        # Subject Branch Project Status CR V

            lars.sutterud Lars Sutterud
            eeegooorrr Egor Melnikov
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes